--- a/public-assets/src/scss/modules/post/common.scss
+++ b/public-assets/src/scss/modules/post/common.scss
@@ -36,7 +36,6 @@
 
   background: $yivic-post-thumb-bg;
   border-radius: 5px;
-  overflow: hidden;
 
   a {
     display: block;
